# Researcher-AI

./: pyproject.toml
.github/workflows/: static.yml
backend/: render.yaml  requirements.txt
backend/app/: main.py  taskgpt.txt
frontend/: index.html
