[project]
name = "researcher-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "browser-use==0.7.7",
    "fastapi==0.115.0",
    "lmnr[all]>=0.7.13",
    "playwright>=1.46.0",
    "pydantic==2.11.9",
    "python-dotenv==1.1.1",
    "uvicorn[standard]==0.35.0",
]
